--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "tests"
   },
   "dependencies": {
-    "node-linq": "^0.0.5"
+    "node-linq": "^0.0.5",
+    "smp-data-builder": "^1.0.3"
   },
   "devDependencies": {
     "mocha": "^3.2.0"
