--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tx-holdem",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "",
   "main": "index.js",
   "directories": {
@@ -17,5 +17,11 @@
     "name": "Alexei Torunov",
     "email": "merisho@ukr.net"
   },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:Merisho/tx-holdem.git"
+  },
+  "homepage": "https://github.com/Merisho/tx-holdem",
+  "keywords": [ "poker", "texas holdem", "texas holdem poker", "poker bot", "game", "poker combinations", "pokerstars" ],
   "license": "ISC"
 }
