--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tx-holdem",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "",
   "main": "index.js",
   "directories": {
@@ -8,10 +8,13 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
     "mocha": "^3.5.3"
   },
   "scripts": {
-    "test": "mocha --recursive"
+    "test": "mocha --recursive",
+    "compile": "npx babel src -d compiled"
   },
   "author": {
     "name": "Alexei Torunov",
@@ -22,6 +25,14 @@
     "url": "git@github.com:Merisho/tx-holdem.git"
   },
   "homepage": "https://github.com/Merisho/tx-holdem",
-  "keywords": [ "poker", "texas holdem", "texas holdem poker", "poker bot", "game", "poker combinations", "pokerstars" ],
+  "keywords": [
+    "poker",
+    "texas holdem",
+    "texas holdem poker",
+    "poker bot",
+    "game",
+    "poker combinations",
+    "pokerstars"
+  ],
   "license": "ISC"
 }
